reflect-demo/tests/errors/invalid_reflect_field_type_trait.rs
trait MyTrait {
    fn my_method(&self, s: &str) -> i32;
}

#[derive(reflect::Input)]
struct MyStruct {
    field: dyn MyTrait,
}

fn main() {}
